--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -15,3 +15,19 @@ button {
   border: 4px solid white;
   background-color: rgba(0, 0, 0, 0);
 }
+
+.emojis {
+  position: absolute;
+}
+
+.emoji {
+  position: absolute;
+  animation-fill-mode: forwards;
+}
+
+
+@keyframes move {
+  50% {
+     transform: translate(2000px, 0);
+  }
+}
