--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -4,6 +4,7 @@ body {
   color: white;
   font-weight: bold;
   letter-spacing: 1vw;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 button {
@@ -14,6 +15,20 @@ button {
   color: white;
   border: 4px solid white;
   background-color: rgba(0, 0, 0, 0);
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+
+}
+
+textarea {
+  height: 20vh;
+  width: 50vw;
+  background-color: rgba(255, 255, 255, .5);
+  font-size: 40px;
+  color: white;
+  font-weight: bold;
+  letter-spacing: 1vw;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+
 }
 
 .emojis {
